Resultado dentro del form

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
                 <input id="descuento" type="number">
         
                 <button type="button" onclick="calcularDescuento()">Calcular</button>
+
+                <p id="resultLabel"></p>
             </form> 
         </div>        
     </main>
